Added Skyward Blast project

--- a/page_skyward_blast.html
+++ b/page_skyward_blast.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Catsification</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/catsification/favicon.png" />
+    <title>Skyward Blast</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/skyward_blast/favicon.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -33,7 +33,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container px-5">
-                <h1 class="masthead-heading mb-0">Catsification</h1>
+                <h1 class="masthead-heading mb-0">Skyward Blast</h1>
             </div>
         </div>
     </header>
@@ -58,7 +58,7 @@
                         </tr>
                         <tr>
                             <td><strong> Project Duration</strong></td>
-                            <td>3 days</td>
+                            <td>7 days</td>
                         </tr>
                         <tr>
                             <td><strong>Engine and Language</strong></td>
@@ -70,18 +70,16 @@
                 <div class="col-lg-4 feature-bordered">
                     <h2 class="display-6">About the project</h2>
                     <p>
-                        Casual game for WebGL where the player memorizes the fur pattern of several cats and places them
-                        on their respective baskets.
+                        3d Rail shooter for WebGL where the player shoots down the incoming enemies to clear the stage.
                     </p>
                     <p>
                         This project was developed and submited as an entry for the <a
-                            href="https://itch.io/jam/mermelada-jam/rate/2374640">Mermelada Jam</a> on Itch.io, ranked
-                        15th from the 63 entries.
+                            href="https://itch.io/jam/7dfps/rate/2426597">7dfps 2023</a> on Itch.io.
                     </p>
                 </div>
                 <div class="col-lg-4">
                     <br>
-                    <img class="img-fluid" src="assets/img/catsification/catsification_menu.gif" alt="..." />
+                    <img class="img-fluid" src="assets/img/skyward_blast/skyward_blast_title.png" alt="..." />
                 </div>
             </div>
         </div>
@@ -92,10 +90,10 @@
             <div class="row gx-6 align-items-center">
                 <div class="col-lg-6">
                     <div class="row gx-0">
-                        <img class="col-lg-12 p-1" src="assets/img/catsification/catsification_gameplay_0.gif"
-                            alt="..." />
-                        <img class="col-lg-12 p-1" src="assets/img/catsification/catsification_gameplay_1.gif"
-                            alt="..." />
+                        <img class="col-lg-6 p-1" src="assets/img/skyward_blast/gameplay_0.gif" alt="..." />
+                        <img class="col-lg-6 p-1" src="assets/img/skyward_blast/gameplay_1.gif" alt="..." />
+                        <img class="col-lg-6 p-1" src="assets/img/skyward_blast/gameplay_2.gif" alt="..." />
+                        <img class="col-lg-6 p-1" src="assets/img/skyward_blast/gameplay_3.gif" alt="..." />
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -103,16 +101,17 @@
                         <div class="p-5 feature-bordered light-text">
                             <h2 class="display-6">Gameplay</h2>
                             <p>
-                                Take notice of each cats fur pattern for a few seconds, once the lights are out drag and
-                                drop each cat to a basket.
+                                Left click button to Shoot. Hold to charge and unleash a more powerful one.
                             </p>
                             <p>
-                                Once all cats are placed, you will advance to the next level, given aditional 20 seconds
-                                to the timer.
+                                R: Reload. Press again when aligned for a quick reload.
                             </p>
                             <p>
-                                For each wrong placed cat, 2 seconds will be distounted from the timer, once the time
-                                reach 0, the game will end.
+                                Right click button at the right time to Parry incoming attacks. Gain protection after a
+                                successful parry.
+                            </p>
+                            <p>
+                                Q: Energy shockwave, filled by successful parries.
                             </p>
                         </div>
                     </div>
@@ -130,10 +129,11 @@
                     </div>
                 </div>
                 <div class="col-lg-8">
-                    <iframe frameborder="0" src="https://itch.io/embed/2374640" width="552" height="167"><a
-                            href="https://carlos-del-aguila.itch.io/catsification">Catsification by Carlos del Aguila,
-                            Chiara Magnani,
-                            RubGuty, David Flores, Meteorat, Apagon, Litos</a></iframe>
+                    <iframe frameborder="0"
+                        src="https://itch.io/embed/2426597?bg_color=000000&amp;fg_color=ffffff&amp;link_color=ffe762"
+                        width="552" height="167"><a href="https://litos-art.itch.io/skyward-blast">Skyward Blast by
+                            Litos, Carlos del
+                            Aguila, RubGuty, Chiara Magnani, David Flores, Apagon</a></iframe>
                 </div>
             </div>
         </div>
