--- a/page_skyward_blast.html
+++ b/page_skyward_blast.html
@@ -70,7 +70,7 @@
                 <div class="col-lg-4 feature-bordered">
                     <h2 class="display-6">About the project</h2>
                     <p>
-                        3d Rail shooter for WebGL where the player shoots down the incoming enemies to clear the stage.
+                        3d Rail shooter for WebGL and Windows where the player shoots down the incoming enemies to clear the stage.
                     </p>
                     <p>
                         This project was developed and submited as an entry for the <a
